[gd_scene load_steps=2 format=3 uid="uid://q2ko4ucq1wi3"]

[ext_resource type="Script" path="res://Game/Enemy/enemy_spawner.gd" id="1_ihxq6"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_ihxq6")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnCoolDown" type="Timer" parent="."]

[node name="Lasers" type="Node" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnCoolDown" to="." method="_on_timer_2_timeout"]
